--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/greenn"
+    android:background="@drawable/green_background_img"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".HomeActivity">
@@ -14,11 +14,15 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
+        android:backgroundTint="@color/white"
         android:text="@string/find_learner"
+        android:textColor="@color/green"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:icon="@drawable/find_learner_icon"
         app:iconGravity="textStart"
-        app:iconSize="25dp" />
+        app:iconSize="25dp"
+        app:iconTint="@color/green" />
 
     <Button
         android:id="@+id/addLearnerButton"
@@ -26,11 +30,14 @@
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
+        android:backgroundTint="@color/white"
         android:text="@string/add_learner"
+        android:textColor="@color/green"
         android:textSize="16sp"
         app:icon="@drawable/add_learner_icon"
         app:iconGravity="textStart"
-        app:iconSize="25dp" />
+        app:iconSize="25dp"
+        app:iconTint="@color/green" />
 
     <Button
         android:id="@+id/logoutBtn"
@@ -38,7 +45,7 @@
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/my_app_error"
+        android:backgroundTint="@color/light_red"
         android:backgroundTintMode="src_over"
         android:text="Log out"
         android:textSize="16sp"
