--- a/app/src/main/res/drawable/blank_square_background.xml
+++ b/app/src/main/res/drawable/blank_square_background.xml
@@ -2,19 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item>
-
         <shape android:shape="rectangle">
-
-            <solid android:color="#FFFFFF"/>
+            <solid android:color="#FAFFFFFF"/>
             <corners
                 android:topRightRadius="10dp"
                 android:topLeftRadius="10dp"
                 android:bottomLeftRadius="10dp"
                 android:bottomRightRadius="10dp"/>
-
         </shape>
-
     </item>
-
-
 </selector>
