--- a/app/src/main/res/layout/activity_edit_procedure.xml
+++ b/app/src/main/res/layout/activity_edit_procedure.xml
@@ -1,158 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/greenn"
-    android:backgroundTintMode="src_over"
-    android:orientation="vertical"
-    android:padding="20dp"
+    android:background="@drawable/green_background_img"
+    android:fillViewport="true"
     tools:context=".EditProcedureActivity">
 
-    <TextView
-        android:id="@+id/procedureHeading_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Edit Procedure"
-        android:textColor="@color/my_app_on_primary"
-        android:textSize="20sp"
-        android:textStyle="bold" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/my_app_on_primary" />
-
-    <TextView
-        android:id="@+id/spinnerLabel_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:labelFor="@id/procedureCategory_spinner"
-        android:text="Select a procedure category below"
-        android:textColor="@color/my_app_on_primary"
-        android:textSize="16sp" />
-
-    <Spinner
-        android:id="@+id/procedureCategory_spinner"
-        style="@android:style/Widget.Spinner.DropDown"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        android:minHeight="48dp" />
-
-    <TextView
-        android:id="@+id/descriptionLabel_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Description"
-        android:textColor="@color/my_app_on_primary"
-        android:textSize="16sp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/procedureDescription_tb"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        app:boxBackgroundColor="@color/my_app_on_primary"
-        app:boxBackgroundMode="filled">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="top"
-            android:inputType="textMultiLine"
-            android:paddingStart="5dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="5dp"
-            android:paddingBottom="5dp"
-            android:textColor="@color/my_app_primary_dark" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/procedurePerformerLabel_tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Person who performed procedure"
-        android:textColor="@color/my_app_on_primary"
-        android:textSize="16sp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/procedurePerformer_tb"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        app:boxBackgroundColor="@color/my_app_on_primary"
-        app:boxBackgroundMode="filled"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="start|top"
-            android:padding="5dp"
-            android:textAlignment="viewStart"
-            android:textColor="@color/my_app_primary_dark" />
-
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <Button
-        android:id="@+id/procedureDate_btn"
-        style="@style/Widget.Material3.Button.ElevatedButton"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="5dp"
-        android:elevation="6dp"
-        android:text="Date performed"
-        android:textSize="16sp"
-        app:cornerRadius="10dp"
-        app:strokeWidth="0.5dp" />
-
-    <TextView
-        android:id="@+id/dateDisplay_tv"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="03/01/2001"
-        android:textSize="20sp" />
+        android:background="@drawable/blank_square_background"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/save_btn"
-        style="@style/Widget.Material3.Button"
-        android:layout_width="250dp"
+        <TextView
+            android:id="@+id/procedureHeading_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit Procedure"
+            android:textAlignment="center"
+            android:textColor="@color/green"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/green" />
+
+        <TextView
+            android:id="@+id/spinnerLabel_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:labelFor="@id/procedureCategory"
+            android:text="Edit the procedure category below"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/procedureCategory"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/green">
+
+            <AutoCompleteTextView
+                android:id="@+id/procedureCategoryAcv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:textColor="@color/green"
+                app:simpleItems="@array/doctors" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/descriptionLabel_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Edit procedure description"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/procedureDescription_tb"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/green">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/procedurePerformerLabel_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Edit the procedure performing doctor"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/procedurePerformer"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/green">
+
+            <AutoCompleteTextView
+                android:id="@+id/procedurePerformerAcv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:textColor="@color/green"
+                app:simpleItems="@array/procedureCategories" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <Button
+            android:id="@+id/procedureDate_btn"
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="Date performed"
+            android:textSize="16sp" />
+
+
+        <TextView
+            android:id="@+id/dateDisplay_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="03/01/2001"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/cancel_btn"
+                style="@style/Widget.Material3.Button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_red"
+                android:elevation="6dp"
+                android:text="Cancel"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/save_btn"
+                style="@style/Widget.Material3.Button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:elevation="6dp"
+                android:text="Save"
+                android:textSize="16sp" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/editProcedurePb"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:backgroundTintMode="src_over"
-        android:elevation="6dp"
-        android:text="Save Edit"
-        android:textSize="16sp" />
+        android:background="#B2B2B2"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/cancel_btn"
-        style="@style/Widget.Material3.Button"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="#FA3122"
-        android:backgroundTintMode="src_over"
-        android:elevation="6dp"
-        android:text="Cancel"
-        android:textSize="16sp" />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
