--- a/app/src/main/res/layout/activity_edit_screening.xml
+++ b/app/src/main/res/layout/activity_edit_screening.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/greenn"
+    android:background="@drawable/green_background_img"
     tools:context=".EditScreeningActivity">
 
     <LinearLayout
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="Edit Screening"
-            android:textColor="@color/my_app_on_primary"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -27,13 +27,13 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="10dp"
-            android:background="@color/my_app_on_primary" />
+            android:background="@color/white" />
 
         <LinearLayout
             android:id="@+id/editScreeningLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/home_background"
+            android:background="@drawable/blank_square_background"
             android:orientation="vertical"
             android:padding="5dp"></LinearLayout>
 
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:backgroundTint="#B71C1C"
+            android:backgroundTint="@color/light_red"
             android:backgroundTintMode="src_over"
             android:text="Cancel" />
 
