--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,37 +2,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loginConstLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/green_background_img"
     tools:context=".LoginActivity">
 
     <!--Progressbar acts as a loading icon-->
-    <ProgressBar
-        android:id="@+id/loginPb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <!--The scrollview allows the user to scroll to the next input field while the keyboard is open-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/blank_square_background"
             android:gravity="center"
+            android:padding="10dp"
             android:orientation="vertical">
 
             <!--Heading-->
@@ -40,10 +33,10 @@
                 android:id="@+id/loginTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="30dp"
                 android:text="@string/login"
                 android:textAlignment="center"
-                android:textColor="@color/my_app_on_surface"
+                android:textColor="@color/green"
                 android:textSize="48sp"
                 android:textStyle="bold" />
 
@@ -54,8 +47,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:hint="@string/email"
-                app:boxBackgroundColor="@color/my_app_on_surface"
-                app:boxBackgroundMode="filled">
+                app:boxBackgroundMode="outline"
+                app:boxStrokeColor="@color/green">
 
                 <com.google.android.material.textfield.TextInputEditText
                     style="@null"
@@ -63,7 +56,7 @@
                     android:layout_height="match_parent"
                     android:inputType="textEmailAddress"
                     android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-                    android:textColor="@color/my_app_primary_dark" />
+                    android:textColor="@color/green" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,12 +65,12 @@
                 android:id="@+id/passwordTb"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:hint="@string/password"
-                app:boxBackgroundColor="@color/my_app_on_surface"
-                app:boxBackgroundMode="filled"
+                app:boxBackgroundMode="outline"
+                app:boxStrokeColor="@color/green"
                 app:endIconMode="password_toggle"
-                app:passwordToggleTint="@color/my_app_primary">
+                app:endIconTint="@color/green"
+                app:passwordToggleTint="@color/green">
 
                 <com.google.android.material.textfield.TextInputEditText
                     style="@null"
@@ -85,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-                    android:textColor="@color/my_app_primary_dark" />
+                    android:textColor="@color/green" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -99,7 +92,6 @@
                 android:layout_marginBottom="5dp"
                 android:text="@string/don_t_have_an_account"
                 android:textAlignment="viewStart"
-                android:textColor="@color/my_app_on_surface"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -112,7 +104,6 @@
                 android:layout_marginBottom="10dp"
                 android:text="@string/forgot_password"
                 android:textAlignment="viewStart"
-                android:textColor="@color/my_app_on_surface"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -130,5 +121,17 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loginPb"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="#B2B2B2"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
