--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,28 +3,16 @@
     <!-- Base application theme for light mode (Material Design) -->
     <style name="AppTheme" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary branding color for the app -->
-        <item name="colorPrimary">@color/my_app_primary</item>
-
-        <!-- Darker variant of the primary color -->
-        <item name="colorPrimaryDark">@color/my_app_primary_dark</item>
-
+        <item name="colorPrimary">@color/green</item>
         <!-- Secondary color for the app -->
-        <item name="colorSecondary">@color/my_app_secondary</item>
-
-        <!-- Error color for the app -->
-        <item name="colorError">@color/my_app_error</item>
+        <item name="colorSecondary">#7CB342</item>
 
         <!-- Text color for the primary background content -->
-        <item name="android:textColorPrimary">@color/my_app_primary</item>
-
-        <!-- Text color for the secondary background content -->
-        <item name="android:textColorSecondary">@color/my_app_primary</item>
-
+        <item name="android:textColorPrimary">@color/green</item>
         <!-- Background color for the app -->
-        <item name="android:windowBackground">@color/my_app_primary</item>
+        <item name="android:windowBackground">@color/green</item>
 
         <!-- Background color for the action bar -->
-        <item name="android:colorBackground">@color/my_app_primary</item>
-
+        <item name="android:colorBackground">@color/green</item>
     </style>
 </resources>
